# llms-from-scratch-practice

./: .cursorrules  .flake8  .gitattributes  .gitignore  .lychee.toml  .markdownlint-cli2.yaml  .markdownlint.json  .markdownlintignore  CONTRIBUTING.md  FIXES_SUMMARY_2026-01-22.md  README.md  REVIEW_REPORT_2026-01-22.md  copilot-instructions.md  flake8_output.txt  lychee.toml  pyproject.toml  requirements.txt
.cursor/rules/: 01_educational-content-rules.mdc  02_repository-structure.mdc  03_quality-assurance.mdc  04_markdown-standards.mdc  05_primary-directives.mdc  06_cross-domain-integration.mdc  07_file-naming-conventions.mdc  08_source-material-rules.mdc  README.md  general.md
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  (+3 more)
docs/: 01_repository-structure.md  01_study_plan.md  source-material-migration-tracker.md
reading-notes/: ch01_reading-strategy.md  ch02_01_decoder_only_transformer_flow.md  ch02_02_byte_pair_encoding.md  ch02_03_embeddings_vs_matmul.md  ch02_04_dataloader_intuition.md  ch03_02_efficient_multihead_attention.md  ch03_03_understanding_buffers.md  ch03_attention_mechanisms.md  ch04_01_gpt_model_architecture.md  ch04_02_performance_analysis.md  ch04_03_kv_cache.md  ch04_04_grouped_query_attention.md  ch04_05_multi_head_latent_attention.md  ch04_06_sliding_window_attention.md  ch04_07_mixture_of_experts.md  ch04_08_deltanet.md
src/: __init__.py  main.py
tests/: __init__.py  test_ch04_model_components.py  test_smoke.py
tools/: clear_notebook_outputs.py  generate_hierarchical_notebook.py
(+97 files in other folders)
